crates/slipway-core/tests/compile_fail/parent_local_requested_outer.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/parent_local_requested_outer.rs:11:9
   |
 6 |     let _ = ChildLayoutPlan::requested_outer(
   |             -------------------------------- arguments to this function are incorrect
...
11 |         wrong_space,
   |         ^^^^^^^^^^^ expected `ContentLocalRect`, found `ParentLocalRect`
   |
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn requested_outer(
   |            ^^^^^^^^^^^^^^^
